ZheFuscatorSetup/src/main/resources/antlr_classes/com/zhefuscator/ZheGrammarParser.java
// Generated from java-escape by ANTLR 4.11.1
package com.zhefuscator;

	import java.util.Map;
	import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ZheGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TOKEN0=1, TOKEN1=2, TOKEN2=3, TOKEN3=4, TOKEN4=5, TOKEN5=6, TOKEN6=7, 
		WHITESPACE=8;
	public static final int
		RULE_r0 = 0, RULE_r1 = 1, RULE_r2 = 2, RULE_r3 = 3, RULE_r4 = 4, RULE_r5 = 5, 
		RULE_r6 = 6, RULE_r7 = 7, RULE_r8 = 8, RULE_r9 = 9, RULE_r10 = 10, RULE_r11 = 11, 
		RULE_r12 = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"r0", "r1", "r2", "r3", "r4", "r5", "r6", "r7", "r8", "r9", "r10", "r11", 
			"r12"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TOKEN0", "TOKEN1", "TOKEN2", "TOKEN3", "TOKEN4", "TOKEN5", "TOKEN6", 
			"WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Map<Integer, Boolean> isSensitive = new HashMap<Integer, Boolean>();

	public ZheGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class R0Context extends ParserRuleContext {
		public R1Context r1() {
			return getRuleContext(R1Context.class,0);
		}
		public R2Context r2() {
			return getRuleContext(R2Context.class,0);
		}
		public R0Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r0; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).enterR0(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).exitR0(this);
		}
	}

	public final R0Context r0() throws RecognitionException {
		R0Context _localctx = new R0Context(_ctx, getState());
		enterRule(_localctx, 0, RULE_r0);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			r1();
			setState(27);
			r2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class R1Context extends ParserRuleContext {
		public Token TOKEN0;
		public TerminalNode TOKEN0() { return getToken(ZheGrammarParser.TOKEN0, 0); }
		public R1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).enterR1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).exitR1(this);
		}
	}

	public final R1Context r1() throws RecognitionException {
		R1Context _localctx = new R1Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_r1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			((R1Context)_localctx).TOKEN0 = match(TOKEN0);

				isSensitive.put((((R1Context)_localctx).TOKEN0!=null?((R1Context)_localctx).TOKEN0.getType():0), false);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class R2Context extends ParserRuleContext {
		public R3Context r3() {
			return getRuleContext(R3Context.class,0);
		}
		public R4Context r4() {
			return getRuleContext(R4Context.class,0);
		}
		public R2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).enterR2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).exitR2(this);
		}
	}

	public final R2Context r2() throws RecognitionException {
		R2Context _localctx = new R2Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_r2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			r3();
			setState(33);
			r4();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class R3Context extends ParserRuleContext {
		public Token TOKEN1;
		public TerminalNode TOKEN1() { return getToken(ZheGrammarParser.TOKEN1, 0); }
		public R3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).enterR3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).exitR3(this);
		}
	}

	public final R3Context r3() throws RecognitionException {
		R3Context _localctx = new R3Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_r3);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			((R3Context)_localctx).TOKEN1 = match(TOKEN1);

				isSensitive.put((((R3Context)_localctx).TOKEN1!=null?((R3Context)_localctx).TOKEN1.getType():0), true);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class R4Context extends ParserRuleContext {
		public R5Context r5() {
			return getRuleContext(R5Context.class,0);
		}
		public R6Context r6() {
			return getRuleContext(R6Context.class,0);
		}
		public R4Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r4; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).enterR4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).exitR4(this);
		}
	}

	public final R4Context r4() throws RecognitionException {
		R4Context _localctx = new R4Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_r4);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			r5();
			setState(39);
			r6();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class R5Context extends ParserRuleContext {
		public Token TOKEN2;
		public TerminalNode TOKEN2() { return getToken(ZheGrammarParser.TOKEN2, 0); }
		public R5Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r5; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).enterR5(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).exitR5(this);
		}
	}

	public final R5Context r5() throws RecognitionException {
		R5Context _localctx = new R5Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_r5);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			((R5Context)_localctx).TOKEN2 = match(TOKEN2);

				isSensitive.put((((R5Context)_localctx).TOKEN2!=null?((R5Context)_localctx).TOKEN2.getType():0), false);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class R6Context extends ParserRuleContext {
		public R7Context r7() {
			return getRuleContext(R7Context.class,0);
		}
		public R8Context r8() {
			return getRuleContext(R8Context.class,0);
		}
		public R6Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r6; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).enterR6(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).exitR6(this);
		}
	}

	public final R6Context r6() throws RecognitionException {
		R6Context _localctx = new R6Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_r6);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			r7();
			setState(45);
			r8();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class R7Context extends ParserRuleContext {
		public Token TOKEN3;
		public TerminalNode TOKEN3() { return getToken(ZheGrammarParser.TOKEN3, 0); }
		public R7Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r7; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).enterR7(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).exitR7(this);
		}
	}

	public final R7Context r7() throws RecognitionException {
		R7Context _localctx = new R7Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_r7);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			((R7Context)_localctx).TOKEN3 = match(TOKEN3);

				isSensitive.put((((R7Context)_localctx).TOKEN3!=null?((R7Context)_localctx).TOKEN3.getType():0), false);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class R8Context extends ParserRuleContext {
		public R9Context r9() {
			return getRuleContext(R9Context.class,0);
		}
		public R10Context r10() {
			return getRuleContext(R10Context.class,0);
		}
		public R8Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r8; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).enterR8(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).exitR8(this);
		}
	}

	public final R8Context r8() throws RecognitionException {
		R8Context _localctx = new R8Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_r8);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			r9();
			setState(51);
			r10();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class R9Context extends ParserRuleContext {
		public Token TOKEN4;
		public TerminalNode TOKEN4() { return getToken(ZheGrammarParser.TOKEN4, 0); }
		public R9Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r9; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).enterR9(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).exitR9(this);
		}
	}

	public final R9Context r9() throws RecognitionException {
		R9Context _localctx = new R9Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_r9);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			((R9Context)_localctx).TOKEN4 = match(TOKEN4);

				isSensitive.put((((R9Context)_localctx).TOKEN4!=null?((R9Context)_localctx).TOKEN4.getType():0), false);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class R10Context extends ParserRuleContext {
		public R11Context r11() {
			return getRuleContext(R11Context.class,0);
		}
		public R12Context r12() {
			return getRuleContext(R12Context.class,0);
		}
		public R10Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r10; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).enterR10(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).exitR10(this);
		}
	}

	public final R10Context r10() throws RecognitionException {
		R10Context _localctx = new R10Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_r10);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			r11();
			setState(57);
			r12();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class R11Context extends ParserRuleContext {
		public Token TOKEN5;
		public TerminalNode TOKEN5() { return getToken(ZheGrammarParser.TOKEN5, 0); }
		public R11Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r11; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).enterR11(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).exitR11(this);
		}
	}

	public final R11Context r11() throws RecognitionException {
		R11Context _localctx = new R11Context(_ctx, getState());
		enterRule(_localctx, 22, RULE_r11);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			((R11Context)_localctx).TOKEN5 = match(TOKEN5);

				isSensitive.put((((R11Context)_localctx).TOKEN5!=null?((R11Context)_localctx).TOKEN5.getType():0), false);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class R12Context extends ParserRuleContext {
		public Token TOKEN6;
		public TerminalNode TOKEN6() { return getToken(ZheGrammarParser.TOKEN6, 0); }
		public R12Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r12; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).enterR12(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZheGrammarListener ) ((ZheGrammarListener)listener).exitR12(this);
		}
	}

	public final R12Context r12() throws RecognitionException {
		R12Context _localctx = new R12Context(_ctx, getState());
		enterRule(_localctx, 24, RULE_r12);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			((R12Context)_localctx).TOKEN6 = match(TOKEN6);

				isSensitive.put((((R12Context)_localctx).TOKEN6!=null?((R12Context)_localctx).TOKEN6.getType():0), false);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}